Initial proof of concept works. Polls the channel's latest 100 messages and notifies if something matches the keywords

--- a/config/slack_config.rb.example
+++ b/config/slack_config.rb.example
@@ -1,1 +1,8 @@
-@slack_token = "YOUR_KEY_HERE"
+SLACK_TOKEN= "YOUR_TOKEN_HERE"
+
+@monitored_channels = {
+  blue: "CHANNEL_ID_1",
+  red: "CHANNEL_ID_2"
+}
+
+KEYWORDS = ["bacon", "raspberry"]
